Kubepractice/ingress/deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment1
  labels:
    app: flask1 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask1 
  template:
    metadata:
      labels:
        app: flask1 
    spec:
      containers:
      - name: flask-cont1 
        image: mohanraw/app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "80Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
