Kubepractice/ingress/deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment2
  labels:
    app: flask2 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask2 
  template:
    metadata:
      labels:
        app: flask2 
    spec:
      containers:
      - name: flask-cont2 
        image: mohanraw/app:2.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "80Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
