Kubepractice/ingress/serv1.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service1 
spec:
  type: ClusterIP
  selector:
    app: flask1 
  ports:
    - port: 8080
      targetPort: 8080
      #nodePort: 30006
