Kubepractice/ingress/serv2.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service2 
spec:
  type: ClusterIP
  selector:
    app: flask2 
  ports:
    - port: 8081
      targetPort: 8080
      #nodePort: 30008
